--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack"
+    "dev": "webpack-dev-server",
+    "build": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
