--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.4.1",
     "style-loader": "^1.1.2",
     "webpack": "^3.10.0",
